--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -161,6 +161,10 @@
                                 }
                                 else if (loginUser.Value == UserRoleType.Attendant.ToString())
                                 {
+                                    <li>
+                                        <img src="data:image/jpeg;base64,@Convert.ToBase64String((byte[])ViewData["ImageData"])" />
+
+                                    </li>
 
                                     <li class="nav-item">
                                         <a class="nav-link text-dark" asp-area=""
