--- a/Views/SuperAdmin/Create.cshtml
+++ b/Views/SuperAdmin/Create.cshtml
@@ -19,9 +19,9 @@
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="Create">
+            <form asp-action="Create" method="post" enctype="multipart/form-data">
 
-                <div class="form-group">
+                <div class="form-group" >
                     <label asp-for="FirstName" class="control-label"></label>
                     <input asp-for="FirstName" class="form-control" />
                     <span asp-validation-for="FirstName" class="text-danger"></span>
@@ -118,6 +118,15 @@
                     <span asp-validation-for="GuarantorPhoneNumber" class="text-danger"></span>
                 </div>
 
+                <div class="col-md-6">
+                    @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
+                    <div class="form-group">
+                        <label asp-for="ProfilePicture" style="width: 100%;"></label>
+
+                        <input asp-for="ProfilePicture" type="file" accept=".png,.jpg,.jpeg,.gif,.tif" class="form-control" style="border:0px!important;padding: 0px;padding-top: 10px;padding-bottom: 30px;" onchange="document.getElementById('profilePicture').src = window.URL.createObjectURL(this.files[0])" />
+                        <span asp-validation-for="ProfilePicture" class="text-danger"></span>
+                    </div>
+                </div>
 
 
                 <div class="form-group">
