--- a/Views/Transaction/Create.cshtml
+++ b/Views/Transaction/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@*@model SMS_MVCDTO.Models.DTOs.ProductDTOs.ProductResponseModel*@
 @*@model ProductTransactionViewModel*@
-@model SMS_MVCDTO.Models.ViewModels.CreateProductTransactionViewModel
+@model IEnumerable<SMS_MVCDTO.Models.DTOs.CartDTOs.CartResponseModel>
 
 
 @{/*
@@ -17,9 +17,130 @@
 }
 
 */}
-<h1> Buy</h1>
-<hr />
+
     
+
+
+
+<main class="main">
+    <!-- <div class="dashboard"> -->
+    <div class="form-container">
+
+        <!-- Signup Form -->
+        <h1>Check Out..</h1>
+        <hr />
+
+        <div id="">
+            <table class="table table-info">
+                <thead>
+                    <tr>
+                        <th>S/N</th>
+
+                        <th>
+                            @Html.DisplayNameFor(model => model.Data.ProductId)
+                        </th>
+
+                        @*<th>
+                            @Html.DisplayNameFor(model => model.Data.ProductName)
+                        </th>*@
+
+                        <th>
+                            @Html.DisplayNameFor(model => model.Data.Quantity)
+                        </th>
+
+                        <th>
+                            @*@Html.DisplayNameFor(model => model.Data.Amount)*@
+                        </th>
+                        @*  <th>
+                        @Html.DisplayNameFor(model =>
+                        model.Data.GuarantorName)
+                        </th>*@
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @{
+                        int serialNumber = 1;
+                    }
+                    @foreach (var item in Model)
+                    {
+
+                        <tr>
+                            <td>
+                                @serialNumber
+                            </td>
+                            @*<td>
+                                @Html.DisplayFor(modelItem => item.Data.FirstName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Data.LastName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Data.Gender)
+                            </td>*@
+
+                            @*  <td>
+                        @Html.DisplayFor(modelItem =>
+                        item.Data.GuarantorName)
+                        </td>*@
+                          @*  <td>
+                                <a asp-action="Edit"
+                               asp-route-staffId="@item.Data.StaffId">Edit</a>
+                                |
+                                <a asp-action="Details"
+                               asp-route-staffId="@item.Data.StaffId">Details</a>
+                                |
+                                <a asp-action="DeletePreview"
+                               asp-route-staffId="@item.Data.StaffId">Delete</a>
+                            </td>*@
+                        </tr>
+                        serialNumber++;
+                    }
+                </tbody>
+            </table>
+
+        </div>
+
+    </div>
+
+    <!-- search box  -->
+    <div class="search-container-side">
+
+        <!-- search box  -->
+        <div class="search-container">
+            <form>
+                <input type="text" placeholder="Customer ID..." name="Details">
+                <button type="submit">
+                    <i class="fa fa-search"></i> Search
+                </button>
+            </form>
+        </div>
+
+        <!-- search box  -->
+        <div class="search-container">
+            <form>
+                <input type="text" placeholder="Search1...">
+                <button type="submit">
+                    <i class="fa fa-search"></i> Search
+                </button>
+            </form>
+        </div>
+
+    </div>
+
+
+</main>
+
+
+
+
+
+
+@{
+
+/*
+ * 
+
 
 <div class="col-md-4">
     @using (Html.BeginForm("Create", "Transaction"))
@@ -52,6 +173,11 @@
             @Html.TextBoxFor(x => x.Transaction.CustomerId, new {@class = "form-control"})
             @Html.ValidationMessageFor(x => x.Transaction.CustomerId,"", new {@class="text-danger"})
         </div>
+
+        */
+    }
+
+      @*  
         
         <div class="form-group">
             @Html.LabelFor(x => x.Transaction.AttendantId, new {@class = "control-label"})
@@ -59,11 +185,11 @@
             @Html.ValidationMessageFor(x => x.Transaction.AttendantId,"", new {@class="text-danger"})
         </div>
         
-        <div class="form-group">
+          <div class="form-group">
             @Html.LabelFor(x => x.TempTotal, new {@class = "control-label"})
             @Html.TextBoxFor(x => x.TempTotal, new {@class = "form-control"})
             @Html.ValidationMessageFor(x => x.TempTotal,"", new {@class="text-danger"})
-        </div>
+        </div>*@
 
 
         <div class="form-group">
