--- a/Views/ProductCategory/Edit.cshtml
+++ b/Views/ProductCategory/Edit.cshtml
@@ -1,12 +1,6 @@
 ﻿@model SMS_MVCDTO.Models.DTOs.ProductCategoriesDTOs.ProductCategoryResponseModel
 
-@{
-    ViewData["Title"] = "Edit";
-    if (TempData["Success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-}
+<partial name="_Notification" />
 
 
 
