--- a/Views/ProductCategory/Index.cshtml
+++ b/Views/ProductCategory/Index.cshtml
@@ -2,6 +2,12 @@
 @{
     ViewData["Title"] = "Index";
 }
+
+
+
+<partial name="_Notification" />
+
+
 <h1>Index</h1>
 <p> <a asp-action="Create"> Add new category </a> || <a asp-controller="Product" asp-action="Create"> Add Product</a></p>
 
