--- a/Views/Attendant/GetByName.cshtml
+++ b/Views/Attendant/GetByName.cshtml
@@ -4,16 +4,7 @@
     ViewData["Title"] = "Dashboard";
 }
 
-@{
-    if (TempData["Success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-}
+<partial name="_Notification" />
 
 
 <h1>Result</h1>
