--- a/Views/Cart/Create.cshtml
+++ b/Views/Cart/Create.cshtml
@@ -2,23 +2,9 @@
 @*@model ProductTransactionViewModel*@
 @model SMS_MVCDTO.Models.ViewModels.AddToCartProductViewModel
 
+<partial name="_Notification" />
 
-@{
-            /*
-    ViewData["Title"] = "Edit";
-    @{
-        if (TempData["success"] != null)
-    {
-    <h2>@TempData["success"]</h2>
-    }
-        if (TempData["failed"] != null)
-    {
-    <h2>@TempData["failed"]</h2>
-    }
-    }
 
-            */
-}
 <h1> Buy</h1>
 <hr />
 
