--- a/Views/Cart/GetAllPendingTransaction.cshtml
+++ b/Views/Cart/GetAllPendingTransaction.cshtml
@@ -1,19 +1,7 @@
 ﻿@using SMS_MVCDTO.Models.DTOs.CartDTOs;
 @model IEnumerable<CartResponseModel>
 
-
-@{
-    ViewData["Title"] = "Create";
-    if (TempData["success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-}
-
+<partial name="_Notification" />
 
 
 <main class="main">
