--- a/Views/Cart/ViewCustomerCart.cshtml
+++ b/Views/Cart/ViewCustomerCart.cshtml
@@ -1,18 +1,6 @@
 ﻿@model SMS_MVCDTO.Models.ViewModels.CartTotalViewModel
 
-
-@{
-    ViewData["Title"] = "Create";
-    if (TempData["success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-}
-
+<partial name="_Notification" />
 
 
 <main class="main">
