--- a/Views/Customer/Dashboard.cshtml
+++ b/Views/Customer/Dashboard.cshtml
@@ -1,15 +1,6 @@
 ﻿@model IEnumerable<SMS_MVCDTO.Models.DTOs.CustomerDTOs.CustomerResponseModel>
-@{
-    ViewData["Title"] = "Create";
-    if (TempData["success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-}
+
+<partial name="_Notification" />
 
 
 <main class="main">
