--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,6 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
+
+<partial name="_Notification" />
+
 <div class="text-center">
     <h1 class="display-4">Welcome ACE Management System</h1>
     @*<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>*@
