--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -4,16 +4,8 @@
 @{
     ViewData["Title"] = "Create";
 }
-@{
-    if (TempData["success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-}
+
+<partial name="_Notification" />
 
 
 <main class="main">
