--- a/Views/Product/Dashboard.cshtml
+++ b/Views/Product/Dashboard.cshtml
@@ -4,17 +4,7 @@
     ViewData["Title"] = "Dashboard";
 }
 
-@{
-    if (TempData["Success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-}
-
+<partial name="_Notification" />
 
 
 <main class="main">
