--- a/Views/Product/Details.cshtml
+++ b/Views/Product/Details.cshtml
@@ -5,21 +5,7 @@
     ViewData["Title"] = "Details";
 }
 
-@{
-    if (TempData["Success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-}
-
-
-
-
-
+<partial name="_Notification" />
 
 
 
