--- a/Views/Product/Edit.cshtml
+++ b/Views/Product/Edit.cshtml
@@ -3,16 +3,9 @@
 @{
     ViewData["Title"] = "Edit";
 }
-@{
-    if (TempData["success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-}
+
+<partial name="_Notification" />
+
 
 <h1> Update Product details</h1>
 <hr />
