--- a/Views/Product/GetByName.cshtml
+++ b/Views/Product/GetByName.cshtml
@@ -4,17 +4,7 @@
     ViewData["Title"] = "Search result";
 }
 
-@{
-    if (TempData["Success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-}
-
+<partial name="_Notification" />
 
 <h1>Manage Product</h1>
 
