--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -1,16 +1,6 @@
 ﻿@model IEnumerable<SMS_MVCDTO.Models.DTOs.ProductDTOs.ProductResponseModel>
-@{
-    ViewData["Title"] = "Create";
-    if (TempData["success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-}
 
+<partial name="_Notification" />
 
 
 
