--- a/Views/ProductCategory/Create.cshtml
+++ b/Views/ProductCategory/Create.cshtml
@@ -3,16 +3,8 @@
 @{
     ViewData["Title"] = "Create";
 }
-@{
-    if (TempData["success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-}
+<partial name="_Notification" />
+
 
 <h1> ADD CATEGORY</h1>
 <hr />
