--- a/Views/ProductCategory/DeletePreview.cshtml
+++ b/Views/ProductCategory/DeletePreview.cshtml
@@ -3,18 +3,9 @@
 @{
     ViewData["Title"] = "Delete";
 }
-@{
-    if (TempData["success"] != null)
-    {
-        <h2> @TempData["success"]</h2>
-    }
-}
-@{
-    if (TempData["failed"] != null)
-    {
-        <h2> @TempData["failed"]</h2>
-    }
-}
+
+<partial name="_Notification" />
+
 
 <h1>Product Category</h1>
 <hr />
