--- a/Views/SalesManager/Dashboard.cshtml
+++ b/Views/SalesManager/Dashboard.cshtml
@@ -3,18 +3,8 @@
 @{
     ViewData["Title"] = "Sales Manager Dashboard";
 }
-@{
 
-    if (TempData["Success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-}
-
+<partial name="_Notification" />
 
 
 
