--- a/Views/SalesManager/Index.cshtml
+++ b/Views/SalesManager/Index.cshtml
@@ -3,16 +3,10 @@
 @{
     ViewData["Title"] = "Home || Sales Manager ";
 }
-@{
-    if (TempData["Success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-}
+
+
+<partial name="_Notification" />
+
 
 
 <h1>Sales manager Dashboard</h1>
