--- a/Views/SuperAdmin/Create.cshtml
+++ b/Views/SuperAdmin/Create.cshtml
@@ -1,17 +1,8 @@
 ﻿@using SMS_MVCDTO.Enums
 @model SMS_MVCDTO.Models.DTOs.SuperAdminDTOs.CreateSuperAdminRequestModel
 
-@{
-    ViewData["Title"] = "Create";
-    if (TempData["Success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-}
+<partial name="_Notification" />
+
 @{
     <h1>Create</h1>
 
