--- a/Views/SuperAdmin/Dashboard.cshtml
+++ b/Views/SuperAdmin/Dashboard.cshtml
@@ -8,16 +8,8 @@ IEnumerable<SMS_MVCDTO.Models.DTOs.SuperAdminDTOs.SuperAdminResponseModel> *@
     ViewData["Title"] = "Sales Manager Dashboard";
 }
 
-@{
-    if (TempData["Success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-}
+<partial name="_Notification" />
+
 
 <main class="main">
     <!-- <div class="dashboard"> -->
