--- a/Views/Transaction/GetByAttendant.cshtml
+++ b/Views/Transaction/GetByAttendant.cshtml
@@ -1,19 +1,7 @@
 ﻿@model IEnumerable<SMS_MVCDTO.Models.DTOs.TransactionDTOs.TransactionResponseModel>
 
-@{
+<partial name="_Notification" />
 
-    ViewData["Title"] = "Transaction";
-    if (TempData["success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-
-}
 
 <h1>Transactions</h1>
 <div class="container1">
