--- a/Views/Transaction/Index.cshtml
+++ b/Views/Transaction/Index.cshtml
@@ -1,21 +1,6 @@
 ﻿@model IEnumerable<SMS_MVCDTO.Models.DTOs.TransactionDTOs.TransactionResponseModel>
 
-@{
-
-    ViewData["Title"] = "Transaction";
-    if (TempData["success"] != null)
-    {
-        <h2>@TempData["success"]</h2>
-    }
-
-    if (TempData["failed"] != null)
-    {
-        <h2>@TempData["failed"]</h2>
-    }
-
-}
-
-
+<partial name="_Notification" />
 
 
 <main class="main">
