fixed user Admin naming

--- a/Views/Attendant/Create.cshtml
+++ b/Views/Attendant/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@using SMS_MVCDTO.Enums
 @model SMS_MVCDTO.Models.DTOs.AttendantDTOs.CreateAttendantRequestModel
 
-@*<partial name="_Notification" />*@
+<partial name="_Notification" />
 
 
 <main class="main">
