--- a/Views/SuperAdmin/Details.cshtml
+++ b/Views/SuperAdmin/Details.cshtml
@@ -13,7 +13,7 @@
         <div>
             <h4>Super Admin</h4>
             <hr />
-            <img id="profilePicture" style="width:20%;height:20%;
+            <img id="profilePicture" style="width:20%;height:20%; border-radius:50%;
                 object-fit:cover"
                 src="data:image/*;base64,@(Convert.ToBase64String(Model.Data.ProfilePicture))">
             <dl class="row">
