--- a/Views/Customer/Create.cshtml
+++ b/Views/Customer/Create.cshtml
@@ -11,98 +11,99 @@
     <!-- <div class="dashboard"> -->
     <div class="form-container">
 
-        <div id="Data-form">
+        @*<div id="Data-form">*@
 
-            <div class="row">
-
-                <h1>Add New Customer</h1>
-
-                <hr />
-                <div class="col-md-4">
-                    <form asp-action="Create">
-                        <div class="form-group">
-                            <label asp-for="FirstName" class="control-label"></label>
-                            <input asp-for="FirstName" class="form-control" />
-                            <span asp-validation-for="FirstName" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="LastName" class="control-label"></label>
-                            <input asp-for="LastName" class="form-control" />
-                            <span asp-validation-for="LastName" class="text-danger"></span>
-                        </div>
-
-                        <div class="form-group">
-                            <label asp-for="Email" class="control-label"></label>
-                            <input asp-for="Email" class="form-control" />
-                            <span asp-validation-for="Email" class="text-danger"></span>
-                        </div>
-
-                        <div class="form-group">
-                            <label asp-for="PhoneNumber" class="control-label"></label>
-                            <input asp-for="PhoneNumber" class="form-control" />
-                            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-                        </div>
-
-                        <div class="form-group">
-                            <label asp-for="DateOfBirth" class="control-label"></label>
-                            <input asp-for="DateOfBirth" class="form-control" />
-                            <span asp-validation-for="DateOfBirth" class="text-danger"></span>
-                        </div>
-
-                        <div class="form-group">
-                            <label asp-for="Address" class="control-label"></label>
-                            <input asp-for="Address" class="form-control" />
-                            <span asp-validation-for="Address" class="text-danger"></span>
-                        </div>
-
-                        <div class="form-group">
-                            <label asp-for="Gender" class="control-label" for="Gender"></label>
-                            <select asp-for="Gender" asp-items="Html.GetEnumSelectList<GenderType>()"></select>
-                            <span asp-validation-for="Gender" class="text-danger"></span>
-                        </div>
+            @*<div class="row">*@
 
 
-                        <div class="form-group">
-                            <label asp-for="MaritalStatus" class="control-label" for="MaritalStatus"></label>
-                            <select asp-for="MaritalStatus" asp-items="Html.GetEnumSelectList<MaritalStatusType>()"></select>
-                            <span asp-validation-for="Gender" class="text-danger"></span>
-                        </div>
+            @*<hr />*@
+            @*<div class="col-md-4">*@
+                <form asp-action="Create">
+                    <h1>Add New Customer</h1>
+                    <div class="form-group">
+                        <label asp-for="FirstName" class="control-label"></label>
+                        <input asp-for="FirstName" class="form-control" />
+                        <span asp-validation-for="FirstName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="LastName" class="control-label"></label>
+                        <input asp-for="LastName" class="form-control" />
+                        <span asp-validation-for="LastName" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="Email" class="control-label"></label>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="PhoneNumber" class="control-label"></label>
+                        <input asp-for="PhoneNumber" class="form-control" />
+                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="DateOfBirth" class="control-label"></label>
+                        <input asp-for="DateOfBirth" class="form-control" />
+                        <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="Address" class="control-label"></label>
+                        <input asp-for="Address" class="form-control" />
+                        <span asp-validation-for="Address" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="Gender" class="control-label" for="Gender"></label>
+                        <select asp-for="Gender" asp-items="Html.GetEnumSelectList<GenderType>()"></select>
+                        <span asp-validation-for="Gender" class="text-danger"></span>
+                    </div>
 
 
-                        <div class="form-group">
-                            <label asp-for="Password" class="control-label"></label>
-                            <input asp-for="Password" type="password" class="form-control" />
-                            <span asp-validation-for="Password" class="text-danger"></span>
-                        </div>
-
-                        <div class="form-group">
-                            <label asp-for="ConfirmPassword" class="control-label"></label>
-                            <input asp-for="ConfirmPassword" type="password" class="form-control" />
-                            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-                        </div>
+                    <div class="form-group">
+                        <label asp-for="MaritalStatus" class="control-label" for="MaritalStatus"></label>
+                        <select asp-for="MaritalStatus" asp-items="Html.GetEnumSelectList<MaritalStatusType>()"></select>
+                        <span asp-validation-for="Gender" class="text-danger"></span>
+                    </div>
 
 
-                        <input type="submit" value="Create" class="btn btn-success" />
-                        <span>
-                            <a asp-action="Index" class="btn btn-warning">Back to List</a>
-                        </span>
-                    </form>
-                </div>
+                    <div class="form-group">
+                        <label asp-for="Password" class="control-label"></label>
+                        <input asp-for="Password" type="password" class="form-control" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="ConfirmPassword" class="control-label"></label>
+                        <input asp-for="ConfirmPassword" type="password" class="form-control" />
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                    </div>
 
 
-            </div>
-        </div>
+                    <input type="submit" value="Create" class="btn btn-success" />
+                    <span>
+                        <a asp-action="Index" class="btn btn-warning">Back to List</a>
+                    </span>
+                </form>
+            @*</div>*@
+
+
+            @*</div>*@
+        @*</div>*@
 
     </div>
 
-    <!-- search box  -->
+    <!-- search box
+
     <div class="search-container">
         <form asp-controller="Customer" asp-action="Details">
             <input type="text" placeholder="Cuistomer Id..." nam="staffId">
             <button type="submit"><i class="fa fa-search"></i> Search </button>
         </form>
     </div>
-
+    -->
     @section Scripts {
         @{
             await Html.RenderPartialAsync("_ValidationScriptsPartial");
