--- a/Views/SuperAdmin/Edit.cshtml
+++ b/Views/SuperAdmin/Edit.cshtml
@@ -15,10 +15,10 @@
 <h4>Super Admin</h4>
 <hr />
 
-<div asp-controller="SuperAdmin" asp-action="Edit" style="font-size: 130%;">
+@*<div asp-controller="SuperAdmin" asp-action="Edit" style="font-size: 130%;">*@
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="Edit">
+        <form asp-action="Edit" method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="Data.StaffId" />
 
@@ -58,7 +58,15 @@
                     <input asp-for="Data.BankName" class="form-control" />
                     <span asp-validation-for="Data.BankName" class="text-danger"></span>
                 </div>
+            <div class="col-md-6">
+                @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
+                <div class="form-group">
+                    <label asp-for="Data.ProfilePicture" style="width: 100%;"></label>
 
+                    <input asp-for="Data.ProfilePicture" type="file" accept=".png,.jpg,.jpeg,.gif,.tif" class="form-control" style="border:0px!important;padding: 0px;padding-top: 10px;padding-bottom: 30px;" onchange="document.getElementById('Data.ProfilePicture').src = window.URL.createObjectURL(this.files[0])" />
+                    <span asp-validation-for="Data.ProfilePicture" class="text-danger"></span>
+                </div>
+            </div>
 
                 <div class="form-group">
                     <input type="submit" value="Save" class="btn btn-success" />
