error during migration while id for bank and address

--- a/Views/SalesManager/DeletePreview.cshtml
+++ b/Views/SalesManager/DeletePreview.cshtml
@@ -43,7 +43,7 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data.PhoneNumber)
         </dd>
-        <dt class="col-sm-2">
+        @*<dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data.HomeAddress)
         </dt>
         <dd class="col-sm-10">
@@ -54,7 +54,7 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data.ResidentialAddress)
-        </dd>
+        </dd>*@
 
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data.DateOfBirth)
@@ -74,12 +74,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data.MaritalStatus)
         </dd>
-        <dt class="col-sm-2">
+       @* <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data.RoleId)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data.RoleId)
-        </dd>
+        </dd>*@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data.BankAccountNumber)
         </dt>
