--- a/Views/SalesManager/Details.cshtml
+++ b/Views/SalesManager/Details.cshtml
@@ -41,7 +41,7 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data.PhoneNumber)
         </dd>
-        <dt class="col-sm-2">
+        @*<dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data.HomeAddress)
         </dt>
         <dd class="col-sm-10">
@@ -52,7 +52,7 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data.ResidentialAddress)
-        </dd>
+        </dd>*@
 
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data.DateOfBirth)
@@ -72,12 +72,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data.MaritalStatus)
         </dd>
-        <dt class="col-sm-2">
+       @* <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data.RoleId)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data.RoleId)
-        </dd>
+        </dd>*@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data.BankAccountNumber)
         </dt>
