--- a/Views/Attendant/Create.cshtml
+++ b/Views/Attendant/Create.cshtml
@@ -56,6 +56,7 @@
                 {@class="text-danger"})
                 </div>
 
+@*
                 <div class="">
                     @Html.LabelFor(x => x.HomeAddress, new {@class = "control-label"})
                     @Html.TextBoxFor(x => x.HomeAddress, new {@class = "form-control"})
@@ -63,13 +64,12 @@
                 {@class="text-danger"})
                 </div>
 
-
                 <div class="">
                     @Html.LabelFor(x => x.ResidentialAddress, new {@class = "control-label"})
                     @Html.TextBoxFor(x => x.ResidentialAddress, new {@class = "form-control"})
                     @Html.ValidationMessageFor(x => x.ResidentialAddress,"", new
                 {@class="text-danger"})
-                </div>
+                </div>*@
 
 
 
